fixed animation bug

--- a/index.html
+++ b/index.html
@@ -402,13 +402,13 @@
     <!---------------------------- Footer Section --------------------------------->
     <footer class="footer" id="contact">
         <div class="container">
-            <div class="about-us" data-aos="fade-right" data-aos-delay="300">
+            <div class="about-us" data-aos="fade-down" data-aos-delay="300">
                 <h2>About Us</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam sit debitis nemo? Fugiat et,
                     nesciunt repudiandae ducimus explicabo eaque id.</p>
             </div>
 
-            <div class="newsletter" data-aos="fade-right" data-aos-delay="300">
+            <div class="newsletter" data-aos="fade-down" data-aos-delay="300">
                 <h2>Newsletter</h2>
                 <p>Stay updated with our latest news everyday</p>
                 <div class="form-element">
@@ -416,7 +416,7 @@
                 </div>
             </div>
 
-            <div class="instagram" data-aos="fade-left" data-aos-delay="300">
+            <div class="instagram" data-aos="fade-up" data-aos-delay="300">
                 <h2>Instagram</h2>
                 <div class="flex-row">
                     <img src="assets/instagram/thumb-card3.png" alt="instagram 1">
@@ -431,7 +431,7 @@
                 </div>
             </div>
 
-            <div class="follow" data-aos="fade-left" data-aos-delay="300">
+            <div class="follow" data-aos="fade-up" data-aos-delay="300">
                 <h2>Follow Us</h2>
                 <p>Let's be social</p>
                 <div class="footer-social">
