--- a/index.html
+++ b/index.html
@@ -32,12 +32,6 @@
 
 <body>
 
-    <!------------------------------ Preloader Start ------------------------------>
-    <div class="preloader">
-        <span></span>
-    </div>
-    <!------------------------------- Preloader End ------------------------------->
-
     <!---------------------------- Navigation bar --------------------------------->
 
     <nav class="nav">
@@ -114,7 +108,7 @@
             <div class="blog-container">
                 <div class="container">
                     <div class="owl-carousel owl-theme blog-post">
-                        <div class="blog-content" data-aos="fade-right" data-aos-delay="300">
+                        <div class="blog-content" data-aos="fade-up" data-aos-delay="300">
                             <img src="./assets/Blog-post/post-1.jpg" alt="blog-post-1">
                             <div class="blog-title">
                                 <h3>London Fashion Week's Continued the Evolution</h3>
@@ -130,7 +124,7 @@
                                 <span>2 Minutes</span>
                             </div>
                         </div>
-                        <div class="blog-content" data-aos="fade-left" data-aos-delay="300">
+                        <div class="blog-content" data-aos="fade-up" data-aos-delay="300">
                             <img src="./assets/Blog-post/post-3.jpg" alt="blog-post-3">
                             <div class="blog-title">
                                 <h3>London Fashion Week's Continued the Evolution</h3>
@@ -138,7 +132,7 @@
                                 <span>2 Minutes</span>
                             </div>
                         </div>
-                        <div class="blog-content" data-aos="fade-right" data-aos-delay="300">
+                        <div class="blog-content" data-aos="fade-up" data-aos-delay="300">
                             <img src="./assets/Blog-post/post-4.png" alt="blog-post-4">
                             <div class="blog-title">
                                 <h3>London Fashion Week's Continued the Evolution</h3>
