--- a/index.html
+++ b/index.html
@@ -253,27 +253,27 @@
                     <div class="category">
                         <h2>Sidebar</h2>
                         <ul class="category-list">
-                            <li class="list-items" data-aos="fade-left" data-aos-delay="100">
+                            <li class="list-items" data-aos="fade-up" data-aos-delay="100">
                                 <a href="#">Software</a>
                                 <span>(05)</span>
                             </li>
 
-                            <li class="list-items" data-aos="fade-left" data-aos-delay="200">
+                            <li class="list-items" data-aos="fade-up" data-aos-delay="200">
                                 <a href="#">Technology</a>
                                 <span>(02)</span>
                             </li>
 
-                            <li class="list-items" data-aos="fade-left" data-aos-delay="300">
+                            <li class="list-items" data-aos="fade-up" data-aos-delay="300">
                                 <a href="#">Lifestyle</a>
                                 <span>(07)</span>
                             </li>
 
-                            <li class="list-items" data-aos="fade-left" data-aos-delay="400">
+                            <li class="list-items" data-aos="fade-up" data-aos-delay="400">
                                 <a href="#">Shopping</a>
                                 <span>(04)</span>
                             </li>
 
-                            <li class="list-items" data-aos="fade-left" data-aos-delay="500">
+                            <li class="list-items" data-aos="fade-up" data-aos-delay="500">
                                 <a href="#">Food</a>
                                 <span>(10)</span>
                             </li>
