added new animation and previous bug fixed

--- a/index.html
+++ b/index.html
@@ -253,27 +253,27 @@
                     <div class="category">
                         <h2>Sidebar</h2>
                         <ul class="category-list">
-                            <li class="list-items" data-aos="flip-up" data-aos-delay="100">
+                            <li class="list-items" data-aos="fade-up" data-aos-delay="100">
                                 <a href="#">Software</a>
                                 <span>(05)</span>
                             </li>
 
-                            <li class="list-items" data-aos="flip-up" data-aos-delay="200">
+                            <li class="list-items" data-aos="fade-up" data-aos-delay="200">
                                 <a href="#">Technology</a>
                                 <span>(02)</span>
                             </li>
 
-                            <li class="list-items" data-aos="flip-up" data-aos-delay="300">
+                            <li class="list-items" data-aos="fade-up" data-aos-delay="300">
                                 <a href="#">Lifestyle</a>
                                 <span>(07)</span>
                             </li>
 
-                            <li class="list-items" data-aos="flip-up" data-aos-delay="400">
+                            <li class="list-items" data-aos="fade-up" data-aos-delay="400">
                                 <a href="#">Shopping</a>
                                 <span>(04)</span>
                             </li>
 
-                            <li class="list-items" data-aos="flip-up" data-aos-delay="500">
+                            <li class="list-items" data-aos="fade-up" data-aos-delay="500">
                                 <a href="#">Food</a>
                                 <span>(10)</span>
                             </li>
@@ -396,13 +396,13 @@
     <!---------------------------- Footer Section --------------------------------->
     <footer class="footer" id="contact">
         <div class="container">
-            <div class="about-us" data-aos="fade-down" data-aos-delay="300">
+            <div class="about-us" data-aos="flip-up" data-aos-delay="300">
                 <h2>About Us</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam sit debitis nemo? Fugiat et,
                     nesciunt repudiandae ducimus explicabo eaque id.</p>
             </div>
 
-            <div class="newsletter" data-aos="fade-down" data-aos-delay="300">
+            <div class="newsletter" data-aos="flip-up" data-aos-delay="300">
                 <h2>Newsletter</h2>
                 <p>Stay updated with our latest news everyday</p>
                 <div class="form-element">
@@ -410,7 +410,7 @@
                 </div>
             </div>
 
-            <div class="instagram" data-aos="fade-up" data-aos-delay="300">
+            <div class="instagram" data-aos="flip-down" data-aos-delay="300">
                 <h2>Instagram</h2>
                 <div class="flex-row">
                     <img src="assets/instagram/thumb-card3.png" alt="instagram 1">
@@ -425,7 +425,7 @@
                 </div>
             </div>
 
-            <div class="follow" data-aos="fade-up" data-aos-delay="300">
+            <div class="follow" data-aos="flip-down" data-aos-delay="300">
                 <h2>Follow Us</h2>
                 <p>Let's be social</p>
                 <div class="footer-social">
